--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -11,6 +11,7 @@
     <a class="sidebar-nav-item {{ispage menu2/*}}active{{end}}" href="/menu2/">More goodies</a>
     <a class="sidebar-nav-item {{ispage menu3/*}}active{{end}}" href="/menu3/">Tags</a>
     <a class="sidebar-nav-item {{ispage hoge/*}}active{{end}}" href="/2023-12/">2023-12</a>
+    <a class="sidebar-nav-item {{ispage hoge/*}}active{{end}}" href="/2024-01/">2024-01</a>
   </nav>
   <div class="sidebar-item">
     <p>&copy; {{fill author}}.</p>
